[package]
name = "pseudo-root"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Sudo make me root"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/pseudo-root"
homepage = "https://crates.io/crates/pseudo-root"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"